external-crates/move/crates/move-compiler/tests/move_2024/parser/match.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/match.move:2:12
  │
2 │     public enum Temperature {
  │            ^^^^
  │            │
  │            Unexpected 'enum'
  │            Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

